[gd_scene load_steps=8 format=2]

[ext_resource path="res://Colliders/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Weapons/Bullet/BulletParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Weapons/Bullet/Sprites/Grenade.png" type="Texture" id=3]
[ext_resource path="res://Items/Weapons/Bullet/AltBullets/GravityBullet/GravityBullet.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.08351

[sub_resource type="CircleShape2D" id=5]
radius = 2.57643

[node name="Bullet" type="KinematicBody2D"]
z_index = 2
collision_layer = 0
script = ExtResource( 4 )

[node name="Particles" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4
frame = 3

[node name="Hitbox" parent="." groups=[
"playerBullet",
] instance=ExtResource( 1 )]
visible = false
collision_layer = 2
collision_mask = 4
maskedHurtbox = "player"

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="QueueArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="QueueArea"]
shape = SubResource( 2 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[connection signal="hit_object" from="Hitbox" to="." method="_on_Hitbox_hit_object"]
[connection signal="body_entered" from="QueueArea" to="." method="_on_QueueArea_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]

[editable path="Hitbox"]
